--- a/public/screen.css
+++ b/public/screen.css
@@ -1,5 +1,6 @@
 :root {
   font: 16px / 1 sans-serif;
+  color: white;
 }
 
 html {
@@ -8,5 +9,91 @@ html {
 
 body {
   margin: 0;
-  min-height: 100%;
+  height: 100%;
+  background-color: rgb(81, 45, 168);
+}
+
+.toplist {
+  display: flex;
+  flex-wrap: row;
+  list-style: none;
+  width: 100%;
+  margin-left: -1.5rem;
+  height: 3rem;
+}
+
+li {
+  margin-top: -0.75rem;
+  margin-left: 0.5rem;
+  font-size: 1rem;
+  width: 100%;
+  border: 2px red solid;
+}
+
+.spaceimage {
+  background-image: url('./images/Mercury.jpg');
+  background-size: cover;
+  background-position-x: -11rem;
+  padding-top: 20rem;
+  padding-bottom: 4rem;
+  padding-right: 22.5rem;
+}
+
+.contactbtn {
+  font-size: 1.2rem;
+  color: white;
+  text-align: left;
+  text-decoration: underline;
+  margin-top: -2rem;
+  margin-bottom: -1rem;
+  margin-right: 2.7rem;
+  padding-top: 1.5rem;
+  padding-left: 1.5rem;
+  padding-right: 2rem;
+  /* border: 2px red solid; */
+}
+
+.aboutbtn {
+  font-size: 1.2rem;
+  color: white;
+  text-align: left;
+  text-decoration: underline;
+  margin-top: -2rem;
+  margin-bottom: -1rem;
+  margin-left: 4rem;
+  padding-top: 1.5rem;
+  padding-left: 20px;
+  padding-right: 20px;
+  /* border: 2px red solid; */
+}
+
+/* button:hover {
+  background-color: rgb(255, 193, 7);
+  color: black;
+  border: none;
+  outline: none;
+  padding: 5px;
+}
+
+button:active {
+  background-color: rgb(255, 193, 7);
+  color: black;
+  border: none;
+  outline: none;
+  padding: 5px;
+}*/
+
+a:hover {
+  background-color: rgb(255, 193, 7);
+  color: black;
+  /* border: none;
+  outline: none; */
+}
+
+.sdg {
+  color: rgb(203, 203, 204);
+}
+
+a {
+  color: rgb(203, 203, 204);
 }
