--- a/public/screen.css
+++ b/public/screen.css
@@ -9,17 +9,20 @@ html {
 
 body {
   margin: 0;
-  height: 100%;
-  background-color: rgb(81, 45, 168);
+  min-height: 100%;
+  background-color: white;
 }
 
 .toplist {
   display: flex;
   flex-wrap: row;
+  align-items: center;
   list-style: none;
   width: 100%;
   margin-left: -1.5rem;
+  margin-top: 0;
   height: 3rem;
+  background-color: rgb(81, 45, 168);
 }
 
 li {
@@ -27,16 +30,20 @@ li {
   margin-left: 0.5rem;
   font-size: 1rem;
   width: 100%;
-  border: 2px red solid;
 }
 
-.spaceimage {
-  background-image: url('./images/Mercury.jpg');
-  background-size: cover;
-  background-position-x: -11rem;
-  padding-top: 20rem;
-  padding-bottom: 4rem;
-  padding-right: 22.5rem;
+div {
+  color: black;
+  text-align: center;
+  font-size: 12px;
+}
+
+.launchesHeader {
+  background-color: gold;
+  color: black;
+  padding: 1.2rem;
+  text-align: left;
+  margin-top: 0;
 }
 
 .contactbtn {
@@ -50,7 +57,6 @@ li {
   padding-top: 1.5rem;
   padding-left: 1.5rem;
   padding-right: 2rem;
-  /* border: 2px red solid; */
 }
 
 .aboutbtn {
@@ -64,36 +70,120 @@ li {
   padding-top: 1.5rem;
   padding-left: 20px;
   padding-right: 20px;
-  /* border: 2px red solid; */
 }
 
-/* button:hover {
-  background-color: rgb(255, 193, 7);
-  color: black;
-  border: none;
-  outline: none;
-  padding: 5px;
+.flexSection {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
 }
 
-button:active {
-  background-color: rgb(255, 193, 7);
+.apiBox {
+  background-color: rgb(237, 237, 237);
+  padding: 0 1rem 0.5rem 1rem;
+  border-radius: 0.5rem;
   color: black;
-  border: none;
-  outline: none;
-  padding: 5px;
-}*/
+}
 
-a:hover {
-  background-color: rgb(255, 193, 7);
+.separateCenterText {
+  font-size: 1rem;
+  font-weight: bolder;
+  /* text-align: center; */
+}
+
+.leftPrevious {
+  margin-top: 7rem;
+  padding-left: 2rem;
+  padding-right: 2rem;
+  border-radius: 0rem 1rem 1rem 0rem;
+  height: 3rem;
+  background-color: gold;
+  width: 2rem;
+  font-size: 2.5rem;
+  text-align: center;
+}
+
+.rightNext {
+  margin-top: 7rem;
+  padding-left: 2rem;
+  padding-right: 2rem;
+  border-radius: 1rem 0rem 0rem 1rem;
+  height: 3rem;
+  background-color: gold;
+  width: 2.5rem;
+  font-size: 2rem;
+  text-align: center;
+}
+
+.bodyText {
+  background-color: rgb(209, 196, 233);
+  text-align: center;
   color: black;
-  /* border: none;
-  outline: none; */
+  font-size: 1.2rem;
+  padding-top: 1.5rem;
+  padding-bottom: 2rem;
 }
 
 .sdg {
   color: rgb(203, 203, 204);
+  background-color: rgb(81, 45, 168);
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+  text-align: center;
+  margin-top: -1rem;
+  margin-bottom: -3rem;
+}
+
+.hide {
+  display: none;
 }
 
 a {
   color: rgb(203, 203, 204);
+}
+
+a:hover {
+  background-color: rgb(255, 193, 7);
+  color: black;
+}
+
+img {
+  height: 375px;
+  width: 375px;
+  object-fit: cover;
+}
+
+.spaceText {
+  position: absolute;
+  top: 35%;
+  left: 100%;
+  transform: translate(-100%, -50%);
+  color: white;
+  font-weight: bold;
+  font-size: 2rem;
+  width: 100%;
+}
+
+.spaceImage {
+  width: auto;
+  object-fit: cover;
+}
+
+@media (min-width: 1025px) {
+  img {
+    height: 400px;
+    width: 100%;
+  }
+
+  .spaceText {
+    position: absolute;
+    top: 22%;
+    left: 100%;
+    transform: translate(-100%, -50%);
+    color: white;
+    font-weight: bold;
+    font-size: 2rem;
+    width: 100%;
+    text-align: center;
+  }
 }
